force-app/main/default/objects/Storage_Management__c/Storage_Management__c.object-meta.xml
<CustomObject>
    <label>Storage Management</label>
    <nameField>
        <label>Storage Management Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Storage Management</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>