force-app/main/default/objects/Storage_Management__c/fields/Embryo_Batch__c.field-meta.xml
<CustomField>
    <fullName>Embryo_Batch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Embryo Batch</label>
    <referenceTo>Embryo_Batch__c</referenceTo>
    <relationshipLabel>Storage Management</relationshipLabel>
    <relationshipName>Storage_Management</relationshipName>
    <type>Lookup</type>
</CustomField>