force-app/main/default/objects/Storage_Management__c/fields/Initial_Storage_Date__c.field-meta.xml
<CustomField>
    <fullName>Initial_Storage_Date__c</fullName>
    <label>Initial Storage Date</label>
    <type>Date</type>
</CustomField>