force-app/main/default/objects/Storage_Management__c/fields/Last_Date_Billed__c.field-meta.xml
<CustomField>
    <fullName>Last_Date_Billed__c</fullName>
    <label>Last Date Billed</label>
    <type>Date</type>
</CustomField>