force-app/main/default/objects/Storage_Management__c/fields/Next_Billing_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Billing_Date__c</fullName>
    <formula>IF( TEXT(Storage_Billing_Period__c) = &quot;1 Month&quot;,  ADDMONTHS(Last_Date_Billed__c, 1), IF( TEXT(Storage_Billing_Period__c) = &quot;3 Months&quot;,  ADDMONTHS(Last_Date_Billed__c, 3), IF( TEXT(Storage_Billing_Period__c) = &quot;6 Months&quot;,  ADDMONTHS(Last_Date_Billed__c, 6), IF( TEXT(Storage_Billing_Period__c) = &quot;12 Months&quot;,  ADDMONTHS(Last_Date_Billed__c, 12), NULL))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Next Billing Date</label>
    <type>Date</type>
</CustomField>