force-app/main/default/objects/Storage_Management__c/fields/Semen_Sample__c.field-meta.xml
<CustomField>
    <fullName>Semen_Sample__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Semen Sample</label>
    <referenceTo>Sperm_Sample__c</referenceTo>
    <relationshipLabel>Storage Management</relationshipLabel>
    <relationshipName>Storage_Management</relationshipName>
    <type>Lookup</type>
</CustomField>