force-app/main/default/objects/Storage_Management__c/fields/Storage_Billing_Period__c.field-meta.xml
<CustomField>
    <fullName>Storage_Billing_Period__c</fullName>
    <label>Storage Billing Period</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 Month</fullName>
            </value>
            <value>
                <fullName>3 Months</fullName>
            </value>
            <value>
                <fullName>6 Months</fullName>
            </value>
            <value>
                <fullName>12 Months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>