force-app/main/default/objects/Storage_Management__c/listViews/allSelection_Storage_Management.listView-meta.xml
<ListView>
    <fullName>allSelection_Storage_Management</fullName>
    <filterScope>Queue</filterScope>
    <label>allSelection</label>
    <queue>allSelection</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>